--- a/MainWindow/MainWindowView.axaml
+++ b/MainWindow/MainWindowView.axaml
@@ -1,9 +1,9 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="clr-namespace:IoTDeviceSimulation"
+        xmlns:mainWindow="clr-namespace:IoTDeviceSimulation.MainWindow"
         x:Class="IoTDeviceSimulation.MainWindow.MainWindowView"
         Title="IoTDeviceSimulation"
-        x:DataType="vm:MainWindowViewModel">
+        x:DataType="mainWindow:MainWindowViewModel">
         
         <Grid ColumnDefinitions="*,*,*" RowDefinitions="*,*,*">
                 <TextBlock Grid.Column="0" Grid.Row="1" DataContext="{Binding MetricGeneratorViewModel}" Text="{Binding DelayBetweenGenerationsInSeconds}" />
