--- a/MainWindow/MainWindowView.axaml
+++ b/MainWindow/MainWindowView.axaml
@@ -10,6 +10,9 @@
                 <TextBlock Grid.Column="1" Grid.Row="1" DataContext="{Binding MetricViewModel}" Text="{Binding Value}" />
                 <TextBox Grid.Column="2" Grid.Row="0">Manual mode handle</TextBox>
                 <TextBox Grid.Column="2" Grid.Row="1">Mode selection</TextBox>
-                <TextBox Grid.Column="2" Grid.Row="2">Automatic mode setup</TextBox>
+                <Panel Grid.Column="2" Grid.Row="2" DataContext="{Binding MetricGeneratorOptionsViewModel}">
+                        <ComboBox SelectedItem="{Binding SelectedGenerator}" Width="200" ItemsSource="{Binding AvailableGenerators}" />
+                </Panel>
+                
         </Grid>
 </Window>
