--- a/MainWindow/MainWindowView.axaml
+++ b/MainWindow/MainWindowView.axaml
@@ -11,7 +11,7 @@
                          Text="{Binding SecondsBetweenUpdates}" />
                 <TextBlock Grid.Column="1" Grid.Row="1" 
                            DataContext="{Binding MetricViewModel}" 
-                           Text="{Binding Metric}" />
+                           Text="{Binding Metric, StringFormat=N2}" />
                 <TextBox Grid.Column="2" Grid.Row="0">Manual actuator mode handle</TextBox>
                 <StackPanel Grid.Column="2" Grid.Row="1"
                             DataContext="{Binding ActuatorOptionsViewModel}">
