--- a/MainWindow/MainWindowView.axaml
+++ b/MainWindow/MainWindowView.axaml
@@ -1,52 +1,74 @@
-<Window xmlns="https://github.com/avaloniaui"
+<suki:SukiWindow xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mainWindow="clr-namespace:IoTDeviceSimulation.MainWindow"
+        xmlns:suki="https://github.com/kikipoulet/SukiUI"
         x:Class="IoTDeviceSimulation.MainWindow.MainWindowView"
         Title="IoTDeviceSimulation"
         x:DataType="mainWindow:MainWindowViewModel">
         
         <Window.Styles>
+
                 <Style Selector="StackPanel">
+                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                        <Setter Property="VerticalAlignment" Value="Center"/>
                         <Setter Property="Spacing" Value="5"/>
+                </Style>
+                
+                <Style Selector="ComboBox">
+                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                </Style>
+                
+                <Style Selector="suki|GlassCard">
+                        <Setter Property="Margin" Value="10" />
                 </Style>
         </Window.Styles>
         
-        <Grid ColumnDefinitions="*,*,*" RowDefinitions="*,*,*">
-                <TextBox Grid.Column="0" Grid.Row="1"
-                         DataContext="{Binding MetricUpdateOptionsViewModel}"
-                         Text="{Binding SecondsBetweenUpdates}" />
+        <Grid ColumnDefinitions="*,*,*" RowDefinitions="*">
+                <suki:GlassCard Grid.Column="0">                
+                        <StackPanel
+                                    DataContext="{Binding MetricUpdateOptionsViewModel}">
+                                <Label>Metric update time (in seconds)</Label>
+                                <NumericUpDown Value="{Binding SecondsBetweenUpdates}" Minimum="0"/>
+                        </StackPanel>
+                </suki:GlassCard>
                 
-                <TextBlock Grid.Column="1" Grid.Row="1" 
-                           DataContext="{Binding MetricViewModel}" 
-                           Text="{Binding Metric, StringFormat=N2}" />
+                <suki:GlassCard Grid.Column="1">
+                        <StackPanel>
+                                <Label>Metric value</Label>
+                                <TextBlock DataContext="{Binding MetricViewModel}"
+                                           Text="{Binding Metric, StringFormat=N2}" />
+                                <Label>Metric generation settings</Label>
+                                <ComboBox DataContext="{Binding MetricGeneratorOptionsViewModel}"
+                                          SelectedItem="{Binding SelectedGenerator}"
+                                          ItemsSource="{Binding AvailableGenerators}" />
+                        </StackPanel>
+                </suki:GlassCard>
                 
-                <StackPanel Grid.Column="2" Grid.Row="1"
-                            DataContext="{Binding ActuatorOptionsViewModel}">
-                        
-                        <Label>Actuator mode selection</Label>
-                        <ComboBox SelectedItem="{Binding SelectedMode}" 
-                                  ItemsSource="{Binding AvailableModes}" />
-                        
-                        <Panel IsVisible="{Binding ShowAutoOptionsViewModel}">
-                                <StackPanel Orientation="Horizontal" DataContext="{Binding AutoOptionsViewModel}" >
-                                        <NumericUpDown Value="{Binding MetricValueLimit, StringFormat=N2}" Minimum="0" Increment="0.1" />
-                                        <NumericUpDown Value="{Binding MetricChange, StringFormat=N2}" Minimum="0" Increment="0.1" />
-                                </StackPanel>
-                        </Panel>
-                        
-                        <Panel IsVisible="{Binding ShowManualOptionsViewModel}">
-                                <StackPanel DataContext="{Binding ManualOptionsViewModel}">
-                                        <Button Command="{Binding ManualHandleCommand}" Content="Trigger manual handle"/>
-                                        <NumericUpDown Value="{Binding MetricChange, StringFormat=N2}" Minimum="0" Increment="0.1" />
-                                </StackPanel>
-                        </Panel>
-                        
-                </StackPanel>
-                
-                <StackPanel Grid.Column="1" Grid.Row="0"
-                            DataContext="{Binding MetricGeneratorOptionsViewModel}">
-                        <Label>Metric generation settings</Label>
-                        <ComboBox SelectedItem="{Binding SelectedGenerator}" ItemsSource="{Binding AvailableGenerators}" />
-                </StackPanel>
+                <suki:GlassCard Grid.Column="2">
+                        <StackPanel
+                                    DataContext="{Binding ActuatorOptionsViewModel}">
+                                
+                                <Label>Actuator mode selection</Label>
+                                <ComboBox SelectedItem="{Binding SelectedMode}" 
+                                          ItemsSource="{Binding AvailableModes}" />
+                                
+                                <Panel IsVisible="{Binding ShowAutoOptionsViewModel}">
+                                        <StackPanel DataContext="{Binding AutoOptionsViewModel}" >
+                                                <Label>Metric value limit</Label>
+                                                <NumericUpDown Value="{Binding MetricValueLimit, StringFormat=N2}" Minimum="0" Increment="0.1" />
+                                                <Label>Metric change</Label>
+                                                <NumericUpDown Value="{Binding MetricChange, StringFormat=N2}" Minimum="0" Increment="0.1" />
+                                        </StackPanel>
+                                </Panel>
+                                
+                                <Panel IsVisible="{Binding ShowManualOptionsViewModel}">
+                                        <StackPanel DataContext="{Binding ManualOptionsViewModel}">
+                                                <Button Command="{Binding ManualHandleCommand}" Content="Trigger manual handle"/>
+                                                <Label>Metric change</Label>
+                                                <NumericUpDown Value="{Binding MetricChange, StringFormat=N2}" Minimum="0" Increment="0.1" />
+                                        </StackPanel>
+                                </Panel>
+                        </StackPanel>
+                </suki:GlassCard>
         </Grid>
-</Window>
+</suki:SukiWindow>
