--- a/MainWindow/MainWindowView.axaml
+++ b/MainWindow/MainWindowView.axaml
@@ -4,7 +4,9 @@
         xmlns:suki="https://github.com/kikipoulet/SukiUI"
         x:Class="IoTDeviceSimulation.MainWindow.MainWindowView"
         Title="IoTDeviceSimulation"
-        x:DataType="mainWindow:MainWindowViewModel">
+        x:DataType="mainWindow:MainWindowViewModel" 
+        FontSize="14"
+        FontFamily="Open Sans">
         
         <Window.Styles>
 
@@ -16,38 +18,76 @@
                 
                 <Style Selector="ComboBox">
                         <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                        <Setter Property="Height" Value="65"/>
+                </Style>
+                
+                <Style Selector="Label">
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                </Style>
+                
+                <Style Selector="suki|GlassCard.Metric">
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                        <Setter Property="VerticalAlignment" Value="Center"/>
+                </Style>
+                
+                <Style Selector="suki|GlassCard > TextBlock">
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                        <Setter Property="VerticalAlignment" Value="Center"/>
+                        <Setter Property="FontSize" Value="24"/>
+                        <Setter Property="FontWeight" Value="10"/>
                 </Style>
                 
                 <Style Selector="suki|GlassCard">
                         <Setter Property="Margin" Value="10" />
+                        <Setter Property="Padding" Value="10"/>
+                </Style>
+                
+                <Style Selector="NumericUpDown">
+                        <Setter Property="Minimum" Value="0"/>
                 </Style>
         </Window.Styles>
         
         <Grid ColumnDefinitions="*,*,*" RowDefinitions="*">
                 <suki:GlassCard Grid.Column="0">                
-                        <StackPanel
-                                    DataContext="{Binding MetricUpdateOptionsViewModel}">
+                        <StackPanel DataContext="{Binding MetricUpdateOptionsViewModel}">
                                 <Label>Metric update time (in seconds)</Label>
-                                <NumericUpDown Value="{Binding SecondsBetweenUpdates}" Minimum="0"/>
+                                <NumericUpDown Value="{Binding SecondsBetweenUpdates, StringFormat=N1}" Increment="1"/>
                         </StackPanel>
                 </suki:GlassCard>
                 
                 <suki:GlassCard Grid.Column="1">
                         <StackPanel>
                                 <Label>Metric value</Label>
-                                <TextBlock DataContext="{Binding MetricViewModel}"
-                                           Text="{Binding Metric, StringFormat=N2}" />
+                                <suki:GlassCard Classes="Metric">
+                                        <TextBlock DataContext="{Binding MetricViewModel}"
+                                                   Text="{Binding Metric, StringFormat=N2}" />
+                                </suki:GlassCard>
                                 <Label>Metric generation settings</Label>
-                                <ComboBox DataContext="{Binding MetricGeneratorOptionsViewModel}"
-                                          SelectedItem="{Binding SelectedGenerator}"
-                                          ItemsSource="{Binding AvailableGenerators}" />
+                                <StackPanel DataContext="{Binding MetricGeneratorOptionsViewModel}">
+                                        <ComboBox SelectedItem="{Binding SelectedGenerator}"
+                                                  ItemsSource="{Binding AvailableGenerators}" />
+                                        
+                                        <Panel IsVisible="{Binding ShowLinearGeneratorViewModel}">
+                                                <StackPanel DataContext="{Binding LinearGeneratorOptionsViewModel}">
+                                                        <Label>Metric increment</Label>
+                                                        <NumericUpDown Value="{Binding Increment, StringFormat=N2}" Increment="0.1"/>
+                                                </StackPanel>
+                                        </Panel>
+                                        
+                                        <Panel IsVisible="{Binding ShowLinearRandomGeneratorViewModel}">
+                                                <StackPanel DataContext="{Binding LinearRandomGeneratorOptionsViewModel}">
+                                                        <Label>Minimum metric change</Label>
+                                                        <NumericUpDown Value="{Binding MinIncrement, StringFormat=N2}" Increment="0.05"/>
+                                                        <Label>Maximum metric change</Label>
+                                                        <NumericUpDown Value="{Binding MaxIncrement, StringFormat=N2}" Increment="0.05"/>
+                                                </StackPanel>
+                                        </Panel>
+                                </StackPanel>
                         </StackPanel>
                 </suki:GlassCard>
                 
                 <suki:GlassCard Grid.Column="2">
-                        <StackPanel
-                                    DataContext="{Binding ActuatorOptionsViewModel}">
-                                
+                        <StackPanel DataContext="{Binding ActuatorOptionsViewModel}">
                                 <Label>Actuator mode selection</Label>
                                 <ComboBox SelectedItem="{Binding SelectedMode}" 
                                           ItemsSource="{Binding AvailableModes}" />
@@ -55,9 +95,9 @@
                                 <Panel IsVisible="{Binding ShowAutoOptionsViewModel}">
                                         <StackPanel DataContext="{Binding AutoOptionsViewModel}" >
                                                 <Label>Metric value limit</Label>
-                                                <NumericUpDown Value="{Binding MetricValueLimit, StringFormat=N2}" Minimum="0" Increment="0.1" />
+                                                <NumericUpDown Value="{Binding MetricValueLimit, StringFormat=N2}" Increment="0.1" />
                                                 <Label>Metric change</Label>
-                                                <NumericUpDown Value="{Binding MetricChange, StringFormat=N2}" Minimum="0" Increment="0.1" />
+                                                <NumericUpDown Value="{Binding MetricChange, StringFormat=N2}" Increment="0.1" />
                                         </StackPanel>
                                 </Panel>
                                 
@@ -65,7 +105,7 @@
                                         <StackPanel DataContext="{Binding ManualOptionsViewModel}">
                                                 <Button Command="{Binding ManualHandleCommand}" Content="Trigger manual handle"/>
                                                 <Label>Metric change</Label>
-                                                <NumericUpDown Value="{Binding MetricChange, StringFormat=N2}" Minimum="0" Increment="0.1" />
+                                                <NumericUpDown Value="{Binding MetricChange, StringFormat=N2}" Increment="0.1" />
                                         </StackPanel>
                                 </Panel>
                         </StackPanel>
