--- a/IotDeviceSimulation/MainWindow/MainWindowView.axaml
+++ b/IotDeviceSimulation/MainWindow/MainWindowView.axaml
@@ -44,6 +44,7 @@
                 
                 <Style Selector="NumericUpDown">
                         <Setter Property="Minimum" Value="0"/>
+                        <Setter Property="ParsingNumberStyle" Value="Float"/>
                 </Style>
         </Window.Styles>
         
